--- a/app/src/main/res/layout/debug.xml
+++ b/app/src/main/res/layout/debug.xml
@@ -20,13 +20,13 @@
             app:layout_constraintVertical_bias="1.0" android:layout_alignParentTop="true">
 
         <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
-            <Button
+            <!--<Button
                     android:text="Закрыть"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/button"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/tableLayout"
-                    app:layout_constraintHorizontal_bias="0.0"/>
+                    app:layout_constraintHorizontal_bias="0.0"/>-->
         </TableRow>
         <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
         <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
