--- a/app/src/main/res/layout-land/suicide_confirmation.xml
+++ b/app/src/main/res/layout-land/suicide_confirmation.xml
@@ -4,7 +4,7 @@
                                                xmlns:tools="http://schemas.android.com/tools"
                                                android:layout_width="match_parent"
                                                android:layout_height="match_parent"
-                                               tools:context="net.afterday.compas.MainActivity"
+                                               tools:context="net.afterday.compas.app.MainActivity"
                                                android:keepScreenOn="true" tools:ignore="MissingDefaultResource">
 
     <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
