--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,23 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                               xmlns:app="http://schemas.android.com/apk/res-auto"
-                                               xmlns:tools="http://schemas.android.com/tools"
-                                               android:id="@+id/activity_main"
-                                               android:layout_width="match_parent"
-                                               android:layout_height="match_parent"
-                                               android:padding="0dp"
-                                               android:layout_margin="0dp"
-                                               tools:context="net.afterday.compas.app.MainActivity"
-                                               android:keepScreenOn="true" tools:ignore="MissingDefaultResource">
-    <net.afterday.compas.app.view.Compass
-        android:id="@+id/compass"
-        app:layout_widthPercent="52.8125%"
-        app:layout_heightPercent="93.888888888888888888888888888889%"
-        app:layout_marginLeftPercent="45.0%"
-        app:layout_marginTopPercent="2.8%"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:id="@+id/activity_main"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             android:padding="0dp"
+                                             android:layout_margin="0dp"
+                                             tools:context="net.afterday.compas.app.MainActivity"
+                                             android:keepScreenOn="true" tools:ignore="MissingDefaultResource">
+
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintWidth_percent="0.45"
+            app:layout_constraintTop_toTopOf="parent">
+
+        <net.afterday.compas.app.view.Bar
+                android:id="@+id/armorbar"
+                app:image="@drawable/bar_armor"
+                app:measurement="horizontal"
+                app:scale_color="@color/armorBar"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.08"
+                android:layout_marginStart="8dp"/>
+
+        <net.afterday.compas.app.view.Bar
+                android:id="@+id/devicebar"
+                app:image="@drawable/bar_device"
+                app:scale_color="@color/deviceBar"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
+                app:layout_constraintTop_toBottomOf="@id/armorbar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.08"
+                android:layout_marginStart="8dp"/>
+
+        <net.afterday.compas.app.view.Bar
+                android:id="@+id/staminabar"
+                app:image="@drawable/bar_stamina"
+                app:scale_color="@color/staminaBar"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
+                app:layout_constraintTop_toBottomOf="@id/devicebar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.08"
+                android:layout_marginStart="8dp"
+             />
+
+        <net.afterday.compas.app.view.Radbar
+                android:id="@+id/radbar"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/staminabar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.18"
+                android:layout_marginStart="8dp"
         />
 
-    <net.afterday.compas.app.pda.geiger.Geiger
+        <net.afterday.compas.app.view.Healthbar
+                android:id="@+id/healthbar"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
+                app:layout_constraintTop_toBottomOf="@id/radbar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.18"
+                android:layout_marginStart="8dp"
+        />
+
+        <android.support.constraint.ConstraintLayout
+                android:layout_height="0dp"
+                android:layout_width="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/healthbar"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp">
+
+            <View
+                    android:id="@+id/log_background"
+                    android:background="@drawable/log_h"
+                    android:layout_height="0dp"
+                    android:layout_width="0dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/log_list"
+                    app:stackFromEnd="true"
+                    app:reverseLayout="true"
+                    android:layout_height="0dp"
+                    android:layout_width="0dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginBottom="9dp"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginTop="18dp"/>
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_percent="0.55"
+            app:layout_constraintTop_toTopOf="parent">
+
+        <net.afterday.compas.app.pda.geiger.GeigerFrame
+                android:id="@+id/compass"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp">
+        </net.afterday.compas.app.pda.geiger.GeigerFrame>
+
+        <View
+                android:id="@+id/clock_background"
+                android:background="@drawable/time_h"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="invisible"
+        />
+
+        <net.afterday.compas.app.view.Clock
+                android:id="@+id/clock"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="invisible"
+        />
+
+        <View
+                android:id="@+id/battery_background"
+                app:layout_heightPercent="20.7%"
+                app:layout_marginLeftPercent="90.8%"
+                app:layout_marginTopPercent="79.0%"
+                app:layout_widthPercent="8.5%"
+                android:background="@drawable/energy_h"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:visibility="invisible"/>
+
+        <net.afterday.compas.app.view.Battery
+                android:id="@+id/battery"
+                app:layout_widthPercent="9.15625%"
+                app:layout_heightPercent="9.87037037%"
+                app:layout_marginLeftPercent="90.5%"
+                app:layout_marginTopPercent="85.3%"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:visibility="invisible"/>
+
+    </android.support.constraint.ConstraintLayout>
+
+
+
+    <!--<net.afterday.compas.app.pda.geiger.Geiger
         android:id="@+id/geiger"
         app:layout_widthPercent="46.99%"
         app:layout_heightPercent="83.24%"
@@ -43,165 +208,72 @@
         app:layout_widthPercent="30.895833333%"
         app:layout_heightPercent="26.018518519%"
         app:layout_marginLeftPercent="57.0%"
-        app:layout_marginTopPercent="78%" />
+        app:layout_marginTopPercent="78%" />-->
 
-    <net.afterday.compas.app.view.Bar
-        android:id="@+id/armorbar"
-        app:image="@drawable/bar_armor"
-        app:layout_heightPercent="8.5%"
-        app:layout_marginLeftPercent="2.2%"
-        app:layout_marginTopPercent="7.1%"
-        app:layout_widthPercent="38%"
-        app:measurement="horizontal"
-        app:offset_bottom="10"
-        app:offset_left="130"
-        app:scale_color="@color/armorBar"
-        app:scale_height="40"
-        app:scale_width="600"/>
 
-    <net.afterday.compas.app.view.Bar
-        android:id="@+id/devicebar"
-        app:image="@drawable/bar_device"
-        app:layout_heightPercent="8.5%"
-        app:layout_marginLeftPercent="2.2%"
-        app:layout_marginTopPercent="0.4%"
-        app:layout_widthPercent="38%"
-        app:measurement="horizontal"
-        app:offset_bottom="11"
-        app:offset_left="130"
-        app:scale_color="@color/deviceBar"
-        app:scale_height="40"
-        app:scale_width="600"/>
-
-    <net.afterday.compas.app.view.Bar
-        android:id="@+id/staminabar"
-        app:image="@drawable/bar_stamina"
-        app:layout_heightPercent="8.5%"
-        app:layout_marginLeftPercent="2.2%"
-        app:layout_marginTopPercent="15%"
-        app:layout_widthPercent="38%"
-        app:measurement="horizontal"
-        app:offset_bottom="21"
-        app:offset_left="130"
-        app:scale_color="@color/staminaBar"
-        app:scale_height="34"
-        app:scale_width="600"/>
-
-    <net.afterday.compas.app.view.Radbar
-        android:id="@+id/radbar"
-        app:layout_heightPercent="20.740740741%"
-        app:layout_marginLeftPercent="2.5%"
-        app:layout_marginTopPercent="23.25%"
-        app:layout_widthPercent="39.010416667%" />
-
-    <net.afterday.compas.app.view.Healthbar
-        android:id="@+id/healthbar"
-        app:layout_heightPercent="20.740740741%"
-        app:layout_marginLeftPercent="2.5%"
-        app:layout_marginTopPercent="44.75%"
-        app:layout_widthPercent="39.010416667%" />
 
     <net.afterday.compas.app.view.LevelIndicator
-        android:id="@+id/qrbutton"
-        app:layout_widthPercent="9.8%"
-        app:layout_heightPercent="17.3%"
-        app:layout_marginLeftPercent="43.5%"
-        app:layout_marginTopPercent="4.2%"
-        android:background="@null"
-        android:contentDescription="TODO" />
+            android:id="@+id/qrbutton"
+            app:layout_widthPercent="9.8%"
+            app:layout_heightPercent="17.3%"
+            app:layout_marginLeftPercent="43.5%"
+            app:layout_marginTopPercent="4.2%"
+            android:background="@null"
+            android:contentDescription="TODO"
+            android:visibility="invisible"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"/>
 
     <View
-        android:id="@+id/levelProgress_background"
-        app:layout_heightPercent="14.2%"
-        app:layout_marginLeftPercent="43.9%"
-        app:layout_marginTopPercent="82.0%"
-        app:layout_widthPercent="10%"
-        android:background="@drawable/exp_h"/>
+            android:id="@+id/levelProgress_background"
+            app:layout_heightPercent="14.2%"
+            app:layout_marginLeftPercent="43.9%"
+            app:layout_marginTopPercent="82.0%"
+            app:layout_widthPercent="10%"
+            android:background="@drawable/exp_h"
+            android:visibility="invisible"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"/>
 
     <net.afterday.compas.app.view.LevelProgress
-        android:id="@+id/levelProgress"
-        app:layout_widthPercent="8.6%"
-        app:layout_heightPercent="6.0%"
-        app:layout_marginLeftPercent="44.4%"
-        app:layout_marginTopPercent="87.8%"
-        />
+            android:id="@+id/levelProgress"
+            app:layout_widthPercent="8.6%"
+            app:layout_heightPercent="6.0%"
+            app:layout_marginLeftPercent="44.4%"
+            app:layout_marginTopPercent="87.8%"
+            android:visibility="invisible"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"/>
 
-    <View
-        android:id="@+id/clock_background"
-        app:layout_heightPercent="14.7%"
-        app:layout_marginLeftPercent="87.8%"
-        app:layout_marginTopPercent="2%"
-        app:layout_widthPercent="10.8%"
-        android:background="@drawable/time_h"/>
-
-    <net.afterday.compas.app.view.Clock
-        android:id="@+id/clock"
-        app:layout_widthPercent="10.15625%"
-        app:layout_heightPercent="9.87037037%"
-        app:layout_marginLeftPercent="87.70%"
-        app:layout_marginTopPercent="2.35%" />
-
-    <View
-        android:id="@+id/battery_background"
-        app:layout_heightPercent="20.7%"
-        app:layout_marginLeftPercent="90.8%"
-        app:layout_marginTopPercent="79.0%"
-        app:layout_widthPercent="8.5%"
-        android:background="@drawable/energy_h"/>
-
-    <net.afterday.compas.app.view.Battery
-        android:id="@+id/battery"
-        app:layout_widthPercent="9.15625%"
-        app:layout_heightPercent="9.87037037%"
-        app:layout_marginLeftPercent="90.5%"
-        app:layout_marginTopPercent="85.3%" />
-
-    <View
-        android:id="@+id/log_background"
-        android:background="@drawable/log_h"
-        app:layout_heightPercent="34%"
-        app:layout_marginLeftPercent="2%"
-        app:layout_marginTopPercent="63%"
-        app:layout_widthPercent="40.7%"
-        />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/log_list"
-        app:layout_widthPercent="37.7%"
-        app:layout_heightPercent="27%"
-        app:layout_marginLeftPercent="3.1%"
-        app:layout_marginTopPercent="67.5%"
-        app:stackFromEnd="true"
-        app:reverseLayout="true" />
 
     <!--<Button-->
-        <!--app:layout_widthPercent="10.15625%"-->
-        <!--app:layout_heightPercent="7.87037037%"-->
-        <!--app:layout_marginLeftPercent="73.5%"-->
-        <!--app:layout_marginTopPercent="84.4%"-->
-        <!--android:text="Stop game service"-->
-        <!--android:onClick="stopGameService" />-->
+    <!--app:layout_widthPercent="10.15625%"-->
+    <!--app:layout_heightPercent="7.87037037%"-->
+    <!--app:layout_marginLeftPercent="73.5%"-->
+    <!--app:layout_marginTopPercent="84.4%"-->
+    <!--android:text="Stop game service"-->
+    <!--android:onClick="stopGameService" />-->
     <!--<Button-->
-        <!--app:layout_widthPercent="10.15625%"-->
-        <!--app:layout_heightPercent="7.87037037%"-->
-        <!--app:layout_marginLeftPercent="63.5%"-->
-        <!--app:layout_marginTopPercent="84.4%"-->
-        <!--android:text="Start game service"-->
-        <!--android:onClick="startGameService" />-->
+    <!--app:layout_widthPercent="10.15625%"-->
+    <!--app:layout_heightPercent="7.87037037%"-->
+    <!--app:layout_marginLeftPercent="63.5%"-->
+    <!--app:layout_marginTopPercent="84.4%"-->
+    <!--android:text="Start game service"-->
+    <!--android:onClick="startGameService" />-->
     <!--<Button-->
-        <!--app:layout_widthPercent="10.15625%"-->
-        <!--app:layout_heightPercent="7.87037037%"-->
-        <!--app:layout_marginLeftPercent="53.5%"-->
-        <!--app:layout_marginTopPercent="84.4%"-->
-        <!--android:text="Revive"-->
-        <!--android:onClick="revivePlayer" />-->
+    <!--app:layout_widthPercent="10.15625%"-->
+    <!--app:layout_heightPercent="7.87037037%"-->
+    <!--app:layout_marginLeftPercent="53.5%"-->
+    <!--app:layout_marginTopPercent="84.4%"-->
+    <!--android:text="Revive"-->
+    <!--android:onClick="revivePlayer" />-->
     <!--<Button-->
-        <!--app:layout_widthPercent="10.15625%"-->
-        <!--app:layout_heightPercent="7.87037037%"-->
-        <!--app:layout_marginLeftPercent="53.5%"-->
-        <!--app:layout_marginTopPercent="74.4%"-->
-        <!--android:text="Kill"-->
-        <!--android:onClick="killPlayer" />-->
+    <!--app:layout_widthPercent="10.15625%"-->
+    <!--app:layout_heightPercent="7.87037037%"-->
+    <!--app:layout_marginLeftPercent="53.5%"-->
+    <!--app:layout_marginTopPercent="74.4%"-->
+    <!--android:text="Kill"-->
+    <!--android:onClick="killPlayer" />-->
 
 
-</android.support.percent.PercentRelativeLayout>
+</android.support.constraint.ConstraintLayout>
